<resources>
    <string name="app_name">RegistroMVC</string>
    <string name="action_settings">Settings</string>


    <string name="message_name">Nombre</string>
    <string name="message_last_name_f">Apellido Paterno</string>
    <string name="message_last_name_m">Apellido Materno</string>
    <string name="message_site">Sito Web</string>
    <string name="message_address">Dirección</string>
    <string name="message_sex">Sexo:</string>
    <string name="message_score">Puntaje:</string>
    <string name="message_married">Soltero</string>

    <string name="message_status">Estado</string>


    <string name="radio_active">Activo</string>
    <string name="radio_inactive">Inactivo</string>

    <string name="btn_msg_save">Guardar</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_table_mvc">TableMVCActivity</string>
    <string name="title_activity_register">Registro</string>

</resources>
